--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!-- https://animate.style/ -->
+  <link rel="stylesheet" href="assets/css/animate.css">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -123,7 +126,7 @@
     <div class="container">
       <div class="row align-items-center inner-border-bottom">
         <div class="col-lg-6 col-md-12">
-          <div class="inner-image">
+          <div class="inner-image wow bounceInLeft">
             <img src="assets/images/left-image.png" alt="">
           </div>
         </div>
@@ -138,7 +141,7 @@
       </div>
       <div class="row align-items-center">
         <div class="col-lg-6 col-md-12 order-1">
-          <div class="inner-image">
+          <div class="inner-image wow bounceInRight">
             <img src="assets/images/right-image.png" alt="">
           </div>
         </div>
@@ -260,6 +263,51 @@
   </div>
   <!-- End Blog Entries -->
 
+  <!-- Talk to us -->
+  <div class="talk-to-us">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="box-head">
+            <h2 class="inner-title">Talk To Us</h2>
+            <p class="inner-desc">Maecenas pellentesque ante faucibus lectus vulputate sollicitudin. Cras feugiat
+              hendrerit semper.</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 col-sm-12">
+          <div class="inner-content">
+            <h4 class="inner-title">Keep in touch</h4>
+            <p>110-220 Quisque diam odio, maximus ac consectetur eu, 10260
+              auctor non lorem</p>
+            <p>You are NOT allowed to re-distribute Softy Pinko template on any template collection websites. Thank you.
+            </p>
+          </div>
+        </div>
+        <div class="col-md-8 col-sm-12">
+          <form action="" class="inner-form">
+            <div class="row">
+              <div class="col-lg-6 col-md-12">
+                <input type="text" placeholder="Full name">
+              </div>
+              <div class="col-lg-6 col-md-12">
+                <input type="text" placeholder="Email Address">
+              </div>
+              <div class="col-xl-12">
+                <textarea name="" id="" placeholder="Your Message"></textarea>
+              </div>
+              <div class="col-xl-12">
+                <button class="button button-one">SEND MESSAGE</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Talk to us -->
+
   <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -267,6 +315,12 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
     crossorigin="anonymous"></script>
+
+  <!-- https://wowjs.uk/docs.html -->
+  <script src="assets/js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
 </body>
 
 </html>
